[frontend]  abort wrapping tag action only one column to avoid issues with flexible text width

--- a/frontend/src/styles/_annotations.scss
+++ b/frontend/src/styles/_annotations.scss
@@ -95,10 +95,15 @@
 
   padding: 16px;
   height: var(--height);
-  width: var(--width);
+
+  flex-basis: var(--width);
+  flex-shrink: 1;
   @include media-breakpoint-down(lg) {
+    flex-basis: auto;
     width: 100%;
   }
+
+  //max-width: var(--width);
 
   display: flex;
   flex-direction: column;
@@ -170,9 +175,16 @@
 }
 
 .annotation-block {
+  display: flex;
+  flex-direction: column;
+  @extend .gap-3;
+  @extend .my-3;
+  justify-content: flex-start;
   position: relative;
+
   width: 100%;
   @include media-breakpoint-up(lg) {
+    flex-direction: row;
     max-height: 90vh;
     position: relative;
   }
@@ -186,20 +198,19 @@
 .tag-action-container {
   --button-label-width: 25vh;
   @include media-breakpoint-down(lg) {
-    --button-label-width: 8vh;
+    --button-label-width: 10vh;
+    flex-wrap: wrap;
   }
 
-  @extend .d-flex;
-  @extend .mh-100;
+  display: flex;
+  flex-shrink: 0;
   @extend .flex-lg-column;
   @extend .justify-content-center;
   @extend .justify-content-lg-start;
-  @extend .flex-wrap;
+
   @extend .gap-2;
   @extend .align-items-end;
   @extend .align-items-lg-start;
-  width: fit-content;
-  position: relative;
 
   .btn-annotate-general-action,
   .btn-annotate-predicted-action,
@@ -209,10 +220,8 @@
     gap: 0.5rem;
     align-items: center;
     color: white;
-    width: fit-content;
 
     height: fit-content;
-    // padding: 5px 10px;
 
     *:last-child,
     *:first-child {
@@ -239,18 +248,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    @include media-breakpoint-up(lg) {
-      min-width: 100%;
-    }
-    // @include media-breakpoint-down(lg) {
-    //   flex-grow: 1;
-    // }
+
     .truncate-middle {
       width: var(--button-label-width);
-
-      @include media-breakpoint-down(lg) {
-        flex-grow: 1;
-      }
     }
     .badge {
       flex-shrink: 0;
@@ -258,10 +258,6 @@
     }
   }
   .no-tag-action {
-    @include media-breakpoint-up(lg) {
-      width: 100%;
-    }
-
     align-items: center;
     span.text {
       display: flex;
@@ -282,7 +278,6 @@
   position: relative;
   text-align: start;
 
-  min-width: 0;
   flex-shrink: 1;
   flex-grow: 1;
   span {
